--- a/src/components/forHome/header/currencyPopUp/currency.scss
+++ b/src/components/forHome/header/currencyPopUp/currency.scss
@@ -3,8 +3,8 @@
   position: absolute;
   display: flex;
   flex-direction: column;
-  width: 114px;
-  height: 169px;
+  width: auto;
+  height: auto;
   margin-top: 10em;
   justify-content: center;
 
