--- a/src/pages/PDP/pdp.scss
+++ b/src/pages/PDP/pdp.scss
@@ -6,7 +6,9 @@
 }
 
 .pdp-wrap {
+  margin-top: 72px;
   display: flex;
+  gap: 40px;
   .pdp-left {
     display: flex;
     flex-direction: column;
