--- a/src/pages/PDP/pdp.scss
+++ b/src/pages/PDP/pdp.scss
@@ -1,3 +1,4 @@
+@import "../../variables.scss";
 .APP {
   width: 100%;
   max-width: 1440px;
@@ -13,5 +14,17 @@
     display: flex;
     flex-direction: column;
     gap: 40px;
+  }
+  .pdp-middle {
+    margin-right: 100px;
+  }
+}
+
+.desc {
+  h1 {
+    @include basic-font(600, 30px, 27px, #1d1f22);
+  }
+  h2 {
+    @include basic-font(400, 30px, 27px);
   }
 }
