--- a/src/pages/PDP/pdp.scss
+++ b/src/pages/PDP/pdp.scss
@@ -28,3 +28,13 @@
     @include basic-font(400, 30px, 27px);
   }
 }
+
+.desc-midd {
+  h1 {
+    @include basic-font(700, 18px, 18px, 1d1f22);
+  }
+  .size {
+    display: flex;
+    gap: 12px;
+  }
+}
