--- a/src/pages/PDP/pdp.scss
+++ b/src/pages/PDP/pdp.scss
@@ -31,10 +31,45 @@
 
 .desc-midd {
   h1 {
-    @include basic-font(700, 18px, 18px, 1d1f22);
+    @include basic-font(700, 18px, 18px, #1d1f22);
+  }
+  .color-wrap {
+    margin-top: 20px;
+    h1 {
+      @include basic-font(700, 18px, 18px, #1d1f22);
+    }
+    .color {
+      display: flex;
+      gap: 10px;
+      margin-top: 8px;
+      margin-bottom: 38px;
+      div {
+        width: 32px;
+        height: 32px;
+      }
+    }
   }
   .size {
     display: flex;
     gap: 12px;
+  }
+  .price {
+    margin-bottom: 40px;
+    button {
+      width: 292px;
+      height: 52px;
+      padding: 16px 32px;
+      border-style: none;
+      color: white;
+      background: #5ece7b;
+    }
+  }
+  .desc-bottom {
+    display: flex;
+    width: 292px;
+    height: 103px;
+    p {
+      @include basic-font(400, 16px, 160%, #1d1f22);
+    }
   }
 }
