--- a/src/pages/Cart/cart.scss
+++ b/src/pages/Cart/cart.scss
@@ -13,6 +13,7 @@
   border-bottom-color: #e5e5e5;
 
   .cart-left {
+    float: left;
     h1 {
       margin-top: 24px;
       @include basic-font(600, 30px, 27px);
@@ -41,6 +42,34 @@
       width: 63px;
       height: 45px;
       border: 1px solid #1d1f22;
+    }
+  }
+  .cart-color {
+    display: flex;
+    gap: 10px;
+    margin-top: 8px;
+    margin-bottom: 38px;
+    div {
+      width: 32px;
+      height: 32px;
+    }
+  }
+
+  .cart-right {
+    margin-top: 28px;
+    float: right;
+    .cart-right-counter {
+      width: 300px;
+      height: 310px;
+      display: flex;
+      flex-direction: column;
+
+      justify-content: space-between;
+      button {
+        width: 45px;
+        height: 45px;
+        border: 1px solid #1d1f22;
+      }
     }
   }
 }
