--- a/src/pages/PDP/pdp.scss
+++ b/src/pages/PDP/pdp.scss
@@ -39,19 +39,11 @@
       @include basic-font(700, 18px, 18px, #1d1f22);
     }
     .color {
-      display: flex;
-      gap: 10px;
-      margin-top: 8px;
-      margin-bottom: 38px;
-      div {
-        width: 32px;
-        height: 32px;
-      }
+      @include cart-color;
     }
   }
   .size {
-    display: flex;
-    gap: 12px;
+    @include cart-size;
   }
   .price {
     margin-bottom: 40px;
