--- a/src/variables.scss
+++ b/src/variables.scss
@@ -12,3 +12,32 @@
   line-height: $height;
   color: $color;
 }
+
+@mixin cart-size() {
+  display: flex;
+  gap: 12px;
+
+  div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 63px;
+    height: 45px;
+    border: 1px solid #1d1f22;
+  }
+  div:hover {
+    background: #1d1f22;
+    color: white;
+  }
+}
+
+@mixin cart-color {
+  display: flex;
+  gap: 10px;
+  margin-top: 8px;
+  margin-bottom: 38px;
+  div {
+    width: 32px;
+    height: 32px;
+  }
+}
