--- a/src/components/forHome/header/currencyPopUp/currency.scss
+++ b/src/components/forHome/header/currencyPopUp/currency.scss
@@ -1,12 +1,13 @@
 @import "../../../../variables.scss";
 .pop {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  width: auto;
-  height: auto;
-  margin-top: 10em;
-  justify-content: center;
+  // position: relative;
+  // display: flex;
+  // flex-direction: column;
+
+  // width: auto;
+  // height: auto;
+  // margin-top: 10em;
+  // justify-content: center;
 
   div {
     width: 114px;
