--- a/src/components/forHome/header/header.scss
+++ b/src/components/forHome/header/header.scss
@@ -34,3 +34,14 @@ header {
     cursor: pointer;
   }
 }
+
+.popup {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+
+  // width: auto;
+  height: auto;
+  margin-top: 17em;
+  justify-content: center;
+}
