--- a/src/pages/PDP/pdp.scss
+++ b/src/pages/PDP/pdp.scss
@@ -50,6 +50,7 @@
     button {
       width: 292px;
       height: 52px;
+      cursor: pointer;
       padding: 16px 32px;
       border-style: none;
       color: white;
