--- a/src/pages/Cart/cart.scss
+++ b/src/pages/Cart/cart.scss
@@ -7,11 +7,17 @@
   }
 }
 
+.section-wrapper {
+  display: flex;
+  flex-direction: column;
+}
 .cart-wrapper {
+  // display: flex;
+  // flex-direction: column;
   border-top: 1px solid;
   border-top-color: #e5e5e5;
   border-bottom: 1px solid;
-  border-bottom-color: #e5e5e5;
+  border-bottom-color: 1px #e5e5e5;
 
   .cart-left {
     float: left;
