--- a/src/components/forHome/header/cartPop/cartpop.scss
+++ b/src/components/forHome/header/cartPop/cartpop.scss
@@ -11,6 +11,8 @@
   width: 325px;
   height: 677px;
   h1 {
+    margin: 0;
+    margin-bottom: 10px;
   }
   .cart-bottom {
     display: flex;
@@ -26,6 +28,8 @@
 
   .card-pop-top {
     h2 {
+      height: 52px;
+      margin: 0;
       @include basic-font(300, 16px, 160%, #1d1f22);
     }
   }
@@ -44,5 +48,26 @@
       height: 24px;
       @include flex(center);
     }
+  }
+
+  .cart-pop-right {
+    position: absolute;
+    right: 50%;
+    top: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    .counter {
+      position: absolute;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
+      height: 190px;
+    }
+  }
+  .cart-bottom {
+    justify-content: space-between;
   }
 }
