--- a/src/components/forHome/header/cartPop/cartpop.scss
+++ b/src/components/forHome/header/cartPop/cartpop.scss
@@ -52,7 +52,7 @@
 
   .cart-pop-right {
     position: absolute;
-    right: 50%;
+    right: 39%;
     top: 10%;
     display: flex;
     flex-direction: column;
@@ -60,6 +60,7 @@
 
     .counter {
       position: absolute;
+      margin-left: -40px;
       display: flex;
       flex-direction: column;
       align-items: center;
