--- a/src/pages/PDP/pdp.scss
+++ b/src/pages/PDP/pdp.scss
@@ -39,6 +39,7 @@
       @include basic-font(700, 18px, 18px, #1d1f22);
     }
     .color {
+      cursor: pointer;
       @include cart-color;
     }
   }
