--- a/src/components/forHome/header/cartPop/cartpop.scss
+++ b/src/components/forHome/header/cartPop/cartpop.scss
@@ -1,6 +1,7 @@
 @import "../../../../variables.scss";
 .cart-pop-wrapper {
   position: absolute;
+  z-index: 1;
   display: flex;
   flex-direction: column;
   margin-top: 30px;
@@ -8,8 +9,7 @@
   background: #ffffff;
   padding: 32px 16px;
   gap: 130px;
-  width: 325px;
-  height: 677px;
+
   h1 {
     margin: 0;
     margin-bottom: 10px;
