--- a/src/components/forHome/header/header.scss
+++ b/src/components/forHome/header/header.scss
@@ -37,7 +37,10 @@ header {
   display: flex;
   align-items: center;
   gap: 10px;
-
+  p {
+    width: 20px;
+    @include flex(center);
+  }
   img {
     cursor: pointer;
   }
