--- a/front/src/pages/product.scss
+++ b/front/src/pages/product.scss
@@ -12,20 +12,26 @@
       line-height: 1;
       background-color: #ffffff;
       height: 100%;
-      .out-of-stack {
-        position: absolute;
-        height: 100%;
-        width: 100%;
-        z-index: 1;
-        background-color: white;
-        opacity: 0.5;
-        color: #8d8f9a;
-        font-size: 24px;
-        text-align: center;
-      }
+
       a {
         color: black;
         text-decoration: none;
+        .out-of-stock {
+          position: absolute;
+          height: 100%;
+          width: 100%;
+          z-index: 1;
+          background-color: white;
+          opacity: 0.5;
+          color: #8d8f9a;
+          font-size: 24px;
+          text-align: center;
+
+          span {
+            position: relative;
+            top: 40%;
+          }
+        }
 
         img {
           width: 100%;
@@ -42,10 +48,8 @@
           line-height: 160%;
 
           p {
-            margin: 0 span {
-              margin: 5px 0;
-              display: block;
-            }
+            display: flex;
+            flex-direction: column;
           }
         }
       }
