--- a/front/src/pages/product.scss
+++ b/front/src/pages/product.scss
@@ -73,5 +73,33 @@
         }
       }
     }
+
+    .add-product-btn:hover {
+      padding: 3px 10px;
+      box-shadow: 0px 0px 16px 5px rgb(0 0 0 / 15%),
+        0 6px 20px 0 rgb(0 0 0 / 14%);
+    }
+
+    .thumbnail:hover .add-product-btn {
+      display: block;
+    }
+
+    .thumbnail {
+      line-height: 1;
+      background-color: #ffffff;
+      height: 100%;
+    }
+
+    .thumbnail:hover {
+      box-shadow: 0px 4px 35px rgba(168, 172, 176, 0.19);
+    }
+
+    .thumbnail:hover a img {
+      padding: 16px;
+    }
+
+    .thumbnail:hover .caption {
+      padding: 0 0 16px 16px;
+    }
   }
 }
